# Resourza

./: .gitignore  README.md  crawl.py  format_0620.json  format_0625.json  format_9231.json  format_9702.json  format_9708.json  format_9709.json  format_9709test.json  generate_configs.py  main.py  pyproject.toml  requirements.txt  subjects_database.json
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: HeroText.jsx  Navbar.jsx  ResourzaFetcherForm.jsx
