[tool.poetry]
name = "paper-scraper"
version = "0.1.0"
description = ""
authors = ["bohrium2b <dzm2026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
pylint = "^3.2.6"
rich = "^13.8.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.4"
fastapi = "^0.135.2"
uvicorn = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"